
  * frontend/{lintian,lintian-info}:
    + [NT] Added profile support (new option --profile), please
      refer to the Lintian User Manual for more information.
  * frontend/lintian:
    + [NT] Ensure that all dependency collections of a check are
      loaded.  Previously Lintian would only load direct
      dependencies of a collection and assume that was enough.

  * lib/Lintian/{Internal/FrontendUtil,Profile}.pm:
    + [NT] New files.
  * lib/Lintian/{Tag/Info,Tags}.pm:
    + [NT] Updated for profile support.

  * man/lintian.pod.in:
    + [NT] Documented the new --profile option.  Note that the
      options --suppress-tags{,-from-file} now supresses tags
      in the active profile.
  * man/lintian-info.pod:
    + [NT] Documented the new --profile option.

  * profiles/*:
    + [NT] Added default profiles for Debian and Ubuntu.  Note
      that these profiles will silently ignore overrides for
      "fatal" (non-overridable) tags.  (Closes: #536364)

 -- Niels Thykier <niels@thykier.net>  Sun, 19 Jun 2011 13:39:10 +0200

lintian (2.5.1) unstable; urgency=low

  * Summary of tag changes:
    + Added:
      - bad-perm-for-file-in-etc-sudoers.d
      - debian-rules-missing-recommended-target
      - dh_pycentral-is-obsolete
      - dh_python-is-obsolete
      - illegal-multi-arch-value
      - non-empty-dependency_libs-in-la-file
    + Removed:
      - uses-dh-python-with-no-pycompat
      - ldconfig-symlink-before-shlib-in-deb

  * checks/binaries:
    + [NT] Applied patch from Paul Wise to detect binaries embeddeding
      glee, glew and libtheora.  (Closes: #629288)
    + [NT] Also consider multiarch dirs when looking for public shared
      libraries.  (Closes: #630164)
  * checks/debhelper{,.desc}:
    + [NT] Recognise that dh_python and dh_pycentral are now obsolete.
      (Closes: #496902, #541978)
  * checks/changes-file:
    + [NT] Always verify the checksums of changes-files.
  * checks/copyright-file: