@@ -58,6 +58,10 @@ lintian (2.5.2) UNRELEASED; urgency=low
       loaded.  Previously Lintian would only load direct
       dependencies of a collection and assume that was enough.
 
+  * lib/Lintian/Command.pm:
+    + [NT] Added support for appending output to files without
+      truncating them first via the new out_append and
+      err_append options.
   * lib/Lintian/{Internal/FrontendUtil,Profile}.pm:
     + [NT] New files.
   * lib/Lintian/{Tag/Info,Tags}.pm:
